# video-caption-generator

./: .env.example  .gitignore  README.md  pyproject.toml
src/video_caption_generator/: __init__.py  audio.py  burn.py  cli.py  download.py  merge.py  speed.py  subtitle.py  transcribe.py  translate.py  trim.py
