[project]
name = "video-caption-generator"
version = "0.1.0"
description = "Transcribe English video audio with Whisper, translate to Korean, and burn subtitles in."
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50.0",
    "imageio-ffmpeg>=0.5.1",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "yt-dlp>=2024.10.7",
]

[project.scripts]
vcg = "video_caption_generator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_caption_generator"]
